--- a/README
+++ b/README
@@ -4,6 +4,14 @@ https://github.com/bfpg/bfpg-isolating-effects-with-monads
 
 All credit towards the approach and code go to the original author.
 
+Here are the original slides:
+
+https://github.com/bfpg/bfpg-isolating-effects-with-monads/blob/master/slides.pdf
+
+and video:
+
+https://vimeo.com/64796627
+
 
 From the original README:
 
